# webpages

./: LICENSE  README.md  __init__.py  config.json  description.md  manifest.json  migrations.py  package-lock.json  package.json  pyproject.toml  toc.md  views.py  views_api.py
static/: index.js  index.vue  routes.json
static/pages/: index.html  shop.html  styles.css
tests/: test_init.py  test_views_api.py
