[project]
name = "webpages"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Admin-only HTML/CSS/JS pages editor for LNbits."
authors = []
urls = { Homepage = "https://lnbits.com", Repository = "https://github.com/lnbits/webpages" }
dependencies = ["lnbits>=1.4.0"]

[tool.poetry]
package-mode = false

[tool.uv]
dev-dependencies = [
    "black>=24.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest>=7.3.2",
    "mypy==1.17.1",
    "pre-commit>=3.2.2",
    "ruff>=0.3.2",
    "types-cffi>=1.16.0.20240331",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
log_cli = false
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
# Same as Black. + 10% rule of black
line-length = 132

[tool.ruff.lint]
# Enable:
# F - pyflakes
# E - pycodestyle errors
# W - pycodestyle warnings
# I - isort
# A - flake8-builtins
# C - mccabe
# N - naming
# UP - pyupgrade
# RUF - ruff
# B - bugbear
select = ["F", "E", "W", "I", "A", "C", "N", "UP", "RUF", "B"]
# UP007: pyupgrade: use X | Y instead of Optional. (python3.10)
ignore = ["UP007", "RUF012"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# needed for pydantic
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["root_validator", "validator"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
]
